2008-07-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added the ability to retrieve signature from Metalink file.
	A retrieved signature is stored in Signature class and it is held by
	DownloadContext class. Note that aria2 doesn't verify signature.
	* src/DownloadContext.cc
	* src/DownloadContext.h
	* src/Makefile.am
	* src/Makefile.in
	* src/Metalink2RequestGroup.cc
	* src/MetalinkEntry.cc
	* src/MetalinkEntry.h
	* src/MetalinkParserController.cc
	* src/MetalinkParserController.h
	* src/MetalinkParserStateMachine.cc
	* src/MetalinkParserStateMachine.h
	* src/Signature.cc
	* src/Signature.h
	* src/SignatureMetalinkParserState.cc
	* src/SignatureMetalinkParserState.h
	* src/VerificationMetalinkParserState.cc
	* src/VerificationMetalinkParserState.h
	* test/Metalink2RequestGroupTest.cc
	* test/MetalinkParserControllerTest.cc
	* test/MetalinkProcessorTest.cc
	* test/test.xml
	
2008-07-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Close DiskAdaptor after renaming file.
	* src/RequestGroup.cc

2008-07-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Corrected indentation
	* src/DefaultBtProgressInfoFile.cc
	
2008-07-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Moved the calls of std::ios::exceptions() inside of try-catch block
	because if an error occurred in constructor of std::fstream, then
	exception is thrown immediately when std::ios::exceptions() is called
	which results unhandled exception and aria2c aborts.
	* src/DefaultBtProgressInfoFile.cc
	
2008-07-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added the test for the previous change in DefaultBtContext.cc
	* test/DefaultBtContextTest.cc
	
2008-07-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that causes infinite loop when the number of pieces are
	fewer than allowed fast set size which is 10 by default.
	* src/DefaultBtContext.cc

2008-07-08  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
